Fixed alignment issues. Updated about page

--- a/src/style/about.module.css
+++ b/src/style/about.module.css
@@ -1,3 +1,6 @@
 .aboutCard{
     border: 1px solid #14971F;
+    margin: 1em;
+    padding: 0.25em 1em;
+    text-align: left;
 }
